# VIO

./: .gitignore  CMakeLists.txt  README.md  install.sh
data/calib/: euroc_calib.yaml
include/: consts.h  def.h  defs.h  ekf.hpp  helpers.h  odo.hpp
lib/: cam.cpp  cam.hpp  ekf.cpp  ekf.hpp  euroc_player.hpp  feature_tracker.hpp  imu.cpp  imu.hpp  matcher.hpp  stereo.hpp  streamer.hpp  visual_odometry.hpp
src/: data_play.cpp  live_play.cpp  main.cpp
tests/: VO_step.cpp  kalman_tests.cpp
tools/: camera_listener.cpp  imu_listener.cpp  plotter.py  stereo_calib.cpp  stereo_capture.cpp
